# es

./: .gitignore  CMakeLists.txt  main.cpp  medical.kb.json
include/: algorithm.hpp  condition.hpp  rule.hpp  util.hpp  variable.hpp
src/: algorithm.cpp  condition.cpp  rule.cpp  util.cpp  variable.cpp
